[package]
name = "wgpu_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18.0", features = [ "derive" ] }
pollster = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "22.1.0"
winit = "0.30.5"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
